# jami-bridge

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Containerfile  Containerfile.base  Containerfile.build  Containerfile.dev  Containerfile.dist  Containerfile.mingw  Containerfile.runtime  Containerfile.test  LICENSE  Makefile  README.md  REPO-SPLIT-PLAN.md  build.sh
.github/workflows/: ci.yml  release.yml
cross-files/: mingw64.txt
examples/echo-bot/: README.md  echo-bot.sh
src/: api_docs.cpp  api_docs.h  client.cpp  client.h  config.cpp  config.h  event_filter.cpp  event_filter.h  hook.cpp  hook.h  log.h  main.cpp  server.cpp  server.h  stdio_server.cpp  stdio_server.h  util.h
